--- a/package.json
+++ b/package.json
@@ -1,13 +1,46 @@
 {
+  "name": "next-block-watcher",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
-    "next": "latest",
+    "@reduxjs/toolkit": "^1.7.1",
+    "babel-plugin-styled-components": "^2.0.2",
+    "ethers": "^5.7.1",
+    "next": "^12.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@types/node": "^17.0.7",
+    "@types/react": "^18.0.21",
+    "@types/react-redux": "^7.1.21",
+    "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.19",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "autoprefixer": "^10.4.12",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "babel-preset-react-app": "^10.0.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.5.4"
   }
 }
